Switch to 35mm headphone and mic by priority when they are hot plugged.

Bug: 849594
Change-Id: Idcfd987a4e2d3357a81905b1f003ab1e81302298
Reviewed-on: https://chromium-review.googlesource.com/1087749
Reviewed-by: Jenny Zhang <jennyz@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Jenny Zhang <jennyz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564945}
Former-commit-id: dc92391591e74937ec7a46f3833e24bf378121e2